--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <link rel="icon" href="/favicon.ico" />
-        <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>zquint.xyz</title>
-    </head>
 
-    <body class="font-sans bg-gray-50">
-        <div id="app"></div>
-        <script type="module" src="/src/main.ts"></script>
-    </body>
+<head>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="preconnect" href="https://rsms.me/">
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>zquint.xyz</title>
+</head>
+
+<body class="font-sans bg-[#e5d8d8]">
+    <div id="app"></div>
+    <script type="module" src="/src/main.ts"></script>
+</body>
+
 </html>
