layout is responsive

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,10 @@
     <title>zquint.xyz</title>
 </head>
 
-<body class="font-sans bg-[#e5d8d8]">
+<!-- body bg Image by kues1 on Freepik -->
+<!-- page bg by Francisco Andreotti on Unsplash  -->
+
+<body class="font-sans">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
 </body>
