dark mode added

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,21 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
-    <link rel="preconnect" href="https://rsms.me/">
-    <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+    <link rel="preconnect" href="https://rsms.me/" />
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>zquint.xyz</title>
-</head>
+  </head>
 
-<!-- body bg Image by kues1 on Freepik -->
-<!-- page bg by Francisco Andreotti on Unsplash  -->
-
-<body class="font-sans">
+  <body class="font-sans">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
-</body>
-
+  </body>
 </html>
